--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.4.1
+beautifulsoup4==4.10.0
 Django==3.2.8
 django-allauth==0.41.0
+django-crispy-forms==1.13.0
 oauthlib==3.1.1
+Pillow==8.4.0
 python3-openid==3.2.0
 pytz==2021.3
+requests==2.26.0
 requests-oauthlib==1.3.0
+soupsieve==2.2.1
 sqlparse==0.4.2
