--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.4.1
+beautifulsoup4==4.10.0
+boto3==1.20.15
+botocore==1.23.15
 dj-database-url==0.5.0
 Django==3.2.8
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-storages==1.12.3
 gunicorn==20.1.0
+jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2-binary==2.9.2
@@ -12,5 +17,7 @@ python3-openid==3.2.0
 pytz==2021.3
 requests==2.26.0
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
+soupsieve==2.2.1
 sqlparse==0.4.2
 stripe==2.62.0
